# LexiSync---Understand-Anything

./: .env  README.md  app.py  pyproject.toml
chroma_db/: chroma.sqlite3
src/embeddings/: embedding_generator.py
src/generation/: rag.py
src/memory/: memory_layer.py
src/podcast/: script_generator.py
src/vector_database/: chroma_vector_db.py
tests/: notebook_pipeline.py
