[project]
name = "lexisync"
version = "0.1.0"
description = "LexiSync - Document-grounded AI assistant powered by Qwen via Hugging Face"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "assemblyai>=0.44.3",
    "huggingface_hub>=0.23.0",
    "sentence-transformers>=3.0.0",
    "firecrawl-py>=4.3.6",
    "ipykernel>=6.30.1",
    "kokoro>=0.9.4",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "soundfile>=0.12.1",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "yt-dlp>=2024.12.13",
    "zep-cloud>=3.4.3",
    "chromadb>=1.5.7",
]
